--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 	<!-- begin footer -->
 	<footer>
-	<p>Student Number: <br>
+	<p>Student Number: 2944819B <br>
 	Submitted in fulfilment of MAD(A)</p>
 	</footer>
 
