--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
 </head>
 
-<body>
+<body style="background-color:#D8BFD8; ">
 
 	<!-- begin the main section of the homepage -->
 	<div id="*Insert appropriate ID - this will not display on your website*">
-		<h1>*Insert Debate topic*</h1>
+		<h1 style="color:rebeccapurple;">Femvertising</h1 style="color:rebeccapurple;>
 		<h2>MAD(A) Project Homepage</h2>
-
-		<p>*Insert paragraph introducing debate topic and key elements of your design*</p>
+<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is for helping to recognize feminist or sexist advertising.</p>
 		<!-- consider whether any other multi-media elements would be appropriate to achieve your chosen design -->
 	</div>
 	
 	<h3>Links to portfolio pages</h3>
 
 	<div id="menu">
-		<p>*Adapt this menu and update the links to each page that you create for your portfolio. This will act as a menu for your work. e.g.*</p>
-		<a href="content_template.html">Week 1 tasks</a><br>
-		<a href="underconstruction.html">Week 2 tasks</a><br>
-		<a href="underconstruction.html">Week 3 tasks</a><br>
+		<h2>Is this advertising sexist or feminist ?</h2>
+		<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is to make a difference between sexist or feminist advertising.</p>
+		<a href="week1.html">Week 1 tasks</a><br>
+		<a href="week2.html">Week 2 tasks</a><br>
+		<a href="week3.html">Week 3 tasks</a><br>
 		<a href="underconstruction.html">Week 4 tasks</a><br>
 		<a href="underconstruction.html">Week 5 tasks</a><br>
 		<a href="underconstruction.html">Week 7 tasks</a><br>
@@ -48,5 +48,5 @@
 
 	<!-- end footer -->
 
-</body>
+</body style="background-color:#D8BFD8;>
 </html>
