--- a/moodboard.html
+++ b/moodboard.html
@@ -37,7 +37,7 @@
 	<!-- begin navigation menu -->
 	<footer>
 	<div id="menu">
-		<a href="index.html">Homepage</a>
+		<a href="index_template.html">Homepage</a>
 	</div>
 	</footer>
 	<!-- end navigation menu -->
