--- a/index.html
+++ b/index.html
@@ -6,32 +6,30 @@
 
 	<title>Homepage</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<!--  <link rel="stylesheet" href="filepath/filename.css"> -->
+	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
 </head>
 
-<body style="background-color:#D8BFD8; ">
+<body>
 
 	<!-- begin the main section of the homepage -->
 	<div id="*Insert appropriate ID - this will not display on your website*">
-		<h1 style="color:rebeccapurple;">Femvertising</h1 style="color:rebeccapurple;>
-		<h2>MAD(A) Project Homepage</h2>
-<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is for helping to recognize feminist or sexist advertising.</p>
+		<h1>Femvertising</h1> 
 		<!-- consider whether any other multi-media elements would be appropriate to achieve your chosen design -->
 	</div>
 	
 	<h3>Links to portfolio pages</h3>
 
 	<div id="menu">
-		<h2>Is this advertising sexist or feminist ?</h2>
-		<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is to make a difference between sexist or feminist advertising.</p>
+		<h2>Is this toy advertising sexist or feminist ?</h2>
+		<p>Female in advertising is an old thing but now we also use feminist value to highlight a brand. The aim of this website is to make a difference between sexist or feminist toy advertising.</p>
 		<a href="week1.html">Week 1 tasks</a><br>
 		<a href="week2.html">Week 2 tasks</a><br>
 		<a href="week3.html">Week 3 tasks</a><br>
-		<a href="underconstruction.html">Week 4 tasks</a><br>
-		<a href="underconstruction.html">Week 5 tasks</a><br>
-		<a href="underconstruction.html">Week 7 tasks</a><br>
-		<a href="underconstruction.html">Week 8 tasks</a><br>
+		<a href="week4.html">Week 4 tasks</a><br>
+		<a href="week5.html">Week 5 tasks</a><br>
+		<a href="week7.html">Week 7 tasks</a><br>
+		<a href="week8.html">Week 8 tasks</a><br>
 		<a href="underconstruction.html">Week 9 tasks</a><br>
 		<a href="underconstruction.html">Week 10 tasks</a>
 <p>Note the use of an under construction page. This lets you set up the infrastructure of your website but without having links that do not work undermining your design!</p>
