--- a/week1.html
+++ b/week1.html
@@ -6,38 +6,67 @@
 
 	<title>*insert appropriate title*</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<!--  <link rel="stylesheet" href="filepath/filename.css"> -->
+	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
 </head>
 
 <body>
 
 	<!-- begin the main section of the page-->
-	<div id="*Insert appropriate ID - this will not display on your website*">
+	<div id="week 1">
 		<h1>Week 1 tasks</h1>
 		
 		<section id="task1">
-		<h2>Task 1</h2>
+		<h2>Task 1 : choosing my topic</h2>
 		<p>These are my ideas of subject : </p>  
 				<li>How to begin to be a runner</li>
 				<li>Zodiac sign</li>
 				<li>How to have the perfect morning routine</li>
 				<li>Femvertising</li>
 		<p> Finally, I choose femvertising because it's my thesis subject in my home university. But I wanted to look at it from a different angle. This is the reason why I took the question : "is this advertising sexist or feminist ?"</p>
+		<p>After my feedback, I was asked to refine my subject as feminist advertising can be vague. So I decided to focus on children's toy advertising. The clichés of sexist toy shops persist and highlighting how to recognise feminist advertising could help parents to eradicate sexism from childhood.</p>
+		<li>Final topic : feminism in toy advertising</li>
+		<p> A campaign highlights the problem of gendered toys and the importance of creating inclusive toys. The name of the campaign is <a href="https://www.lettoysbetoys.org.uk"> Let toys be toys </a> </p> 
+			<img src="images/let.jpeg" alt="let toys be toys" height="150">
 		</section>
 		
 		<section id="task2">
-		<h2>Some links and bibliography</h2>
+		<h2>Task 2 : Explore the scope of the topic and narrow down the focus</h2>
+		<p>The main question is : "is this advert feminist ?" In fact, I'm going to ask people to find out whether they can recognise a feminist ad or not.</p>
 		<p>Some people tought that femvertising is a recent phenomenon. But it's not the case even if "femvertising" is a recent term. It's why, I'll use advertising from differents period. To find the good sources, there are the boolean operators I used : Feminism AND advertising, Feminist AND advertising, femwashing, fake AND femvertising, vintage AND female AND advertising, vintage AND feministe AND advertsing.
-		Finally there are some sources who look important for me</p>
+		Finally there are some sources who look important for me.</p>
 		<ul>
 				<li>The book frome Andi Zeisler, "We were feminist once" is one of the best book if we wantt to learn about women representation and how to be feminist.</li>
 				<li>Pinterest collections contain a large number of vintage advertisements</li>
 				<li><a href="https://www.fauxfeminism.com"> Faux feminism</a> This website hightlight the good and bad campaign feminists. Moreover, Katie Martell create the Litmus test to recognize if the brand make femwashing or not.</li>
 				<li>This article gives some tools to make but also to recognize advertising<a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjQ3YnT_O2BAxVNXUEAHcHkBewQFnoECA0QAw&url=https%3A%2F%2Fwww.atlantis-press.com%2Farticle%2F125992183.pdf&usg=AOvVaw27hql0NiC9sCL1BR99JJqs&opi=89978449"> (scientific article) </a> </li>
 		</ul>
-		</section>
+		<p>I also looked for sources that focused solely on children's toy advertising and its repercussions. I always tried to find documents related to feminism and gender.</p>
+		<ul>
+				<li>Dinella, Lisa, "Gender-Typing of Children’s Toys: Causes, Consequences, and Correlates" in Sex roles, v 79 no. 5-6, pp 253-259, 2018-09-01</li>
+				<li>Fern Johnson & Karren Young (2002) Gendered voices in children's television advertising, Critical Studies in Media Communication, 19:4, 461-480, DOI: 10.1080/07393180216572</li>
+		</ul>
+		<p>I'm going to use the sources in my explanations and definitions of feminist and non-feminist advertising. I can't afford to give a subjective opinion on this kind of subject. The sources will allow me to analyse the qualities of a feminist ad but also to explain to visitors why it's important to give them interest.</p>
+
+		<h2>Task 3 : Keeping track of my resources</h2>
+		<p> I created a folder in my computer to keep the all document</p> 
+		<img src="images/screen/bibli.png" alt="documents" height="150">
+		<p>In this folder is a Word document containing my entire bibliography. You can also find this document below.</p>
+		<iframe src="https://gla-my.sharepoint.com/personal/2944819b_student_gla_ac_uk/_layouts/15/Doc.aspx?sourcedoc={29d79fb2-e198-47f7-b5e7-b5b79a079a26}&amp;action=embedview" width="476px" height="288px" frameborder="0"> Bibliography <a target="_blank" href="https://office.com">Microsoft Office</a> incorporé, avec <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 		
+		</section>
+		<section id="task2">
+		<h2>Lab Task 1 - Setting up my file structure</h2>
+		<p> Here is the location of the file. As stated in the instructions, organisation is important. Even more so when working for HTML.</p>
+		<img src="images/screen/loc1.jpeg" alt="localisation" height="150">
+		<img src="images/screen/loc2.jpeg" alt="localisation" height="150">
+		<img src="images/screen/loc3.jpeg" alt="localisation" height="150">
+		<img src="images/screen/loc4.jpeg" alt="localisation" height="150">
+		<img src="images/screen/loc5.jpeg" alt="localisation" height="150">
+		<img src="images/screen/loc6.jpeg" alt="localisation" height="150">
+		<h2>Lab Task 2 - Review of HTML</h2>
+		<p>I'm not very confident with coding. I've used it in the past, but only with Python, to do a Twitter analysis study. So this will be the first time I've created a website. 
+		So I'm very happy to have the template that I'm using as a basis for building my portfolio.</p>
 	</div>
 	<!-- end the main section of the homepage -->
 	<hr>	
