--- a/week2.html
+++ b/week2.html
@@ -4,22 +4,21 @@
 <head>
 	<!-- Use this section for your webpage metadata - more detail https://www.w3schools.com/html/html_head.asp -->
 
-	<title>Week 2 task 2</title>
+	<title>Week 2</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<!--  <link rel="stylesheet" href="filepath/filename.css"> -->
-	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
+	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 </head>
 
 <body>
 
 	<!-- begin the main section of the page-->
-	<div id="*Insert appropriate ID - this will not display on your website*">
+	<div id="week2">
 		<h1>Week 2 tasks</h1>
-		<p>This task concern my personal reflexion about the audience. </p>
-		<p>The aim of this website is to made a survey about the consumer perception but also to create curiosity about this topic.</p>
-
 		<section id="task1">
-		<h2>Audience profile</h2>
+		<h2>IL task 1 : Identifying your audience</h2>
+    <p>This task concern my personal reflexion about the audience. </p>
+    <p>The aim of this website is to made a survey about the consumer perception but also to create curiosity about this topic.</p>
+    <h3>Audience profile</h3>
 		<table>
   <tr>
     <th>Audience charachteristic</th>
@@ -27,11 +26,11 @@
   </tr>
   <tr>
     <td>Age</td>
-    <td>Young adult, student, or adult. More for people around 16 and 35 years old with knowledge.</td> 
+    <td>Young adult, student, or adult. More for people around 16 and 35 years old with knowledge.It can also be young parents who want to combat sexism in their education.</td> 
   </tr>
   <tr>
     <td>Gender</td>
-    <td>More for female because it’s a subject who impact more female but I also need to adapt my explanation for male</td> 
+    <td>More for female because it’s a subject who impact more female but I also need to adapt my explanation for male.</td> 
   </tr>
   <tr>
     <td>Language profiency </td>
@@ -39,11 +38,11 @@
   </tr>
   <tr>
     <td>Education level </td>
-    <td>It’s a specific subject so it’s more for people who have minimum a bachelor or who study communication, marketing, digital, business or gender. </td> 
+    <td>It’s a specific subject so it’s more for people who have minimum a bachelor or who study communication, marketing, digital, business or gender. You don't necessarily need a degree, but you do need to be interested in feminism. </td> 
   </tr>
   <tr>
   	<td>Attitude toward writer or organization </td>
-    <td>I think that people who want to visit this type of website have already curiosity for one one these following subjects : communication, marketing, digital, business, gender, female representation, feminism, sexism, femwashing, advertising. The aim is too preserve this curiosity. The main point is not to make generality and not to be too subjective. In fact, it's also a survey so I can't influence people point of view.</td> 
+    <td>I think that people who want to visit this type of website have already curiosity for one one these following subjects : communication, marketing, digital, business, gender, female representation, feminism, sexism, femwashing, advertising. The aim is too preserve this curiosity. The main point is not to make generality and not to be too subjective. </td> 
   </tr>
   <tr>
   	<td>Knoweldge of the topic </td>
@@ -51,14 +50,17 @@
   </tr>
   <tr>
   	<td>Audience action </td>
-    <td>They'll choose if it’s feminist for them or sexist, it’s important to understand the consumer perception and also to create a personal reflection. I'll also add some links because the aim is to create some interests for femvertising. </td> 
+    <td>They'll choose if it’s feminist for them or sexist, it’s important to understand the consumer perception and also to create a personal reflection. I'll also add some links because the aim is to create some interests for femvertising. What's more, the action won't just be for the site: the aim is to influence their consumption habits. Giving power to feminist advertising and brands will encourage this change.</td> 
   </tr>
   </table>
 		</section>
 		
 		<section id="task2">
-		<h2>Personna</h2>
+    <h2>IL task 2 : Building an audience personas</h2>
+    <p>I decided to create 2 different personas. The age range of my audience profile is quite wide, which is why I chose 2 personas with an age gap. However, in terms of gender, I prefer to concentrate on female personas because I think that despite everything, this is a subject that will appeal more to women. However, I don't exclude men from my audience. </p>
+		<h3>Persona 1</h3>
 		<ul>
+    <p>My first persona focuses on a person who is interested in communication in general. </p>
 		<table>
   <tr>
     <td>Name</td>
@@ -84,6 +86,10 @@
     <td>Occupation</td>
     <td>Postgraduate student in Marketing</td> 
   </tr>
+  <tr>
+    <td>Situation</td>
+    <td>Single</td> 
+  </tr>
    <tr>
     <td>Web habits</td>
     <td>go 3 hours/day on social media</td> 
@@ -101,10 +107,88 @@
     <td>She makes some researches about women and feminism representations </td> 
   </tr>
 </table>
+<h3>Persona 2</h3>
+<p>my second persona focuses on a young mother who wants a more inclusive education.</p>
+<table>
+  <tr>
+    <td>Name</td>
+    <td>Elizabeth Smith</td> 
+  </tr>
+  <tr>
+    <td>Age</td>
+    <td>34 years</td> 
+  </tr>
+     <tr>
+    <td>Gender</td>
+    <td>Female</td> 
+  </tr>
+  <tr>
+    <td>Location</td>
+    <td>London</td> 
+  </tr>
+    <tr>
+    <td>Occupation</td>
+    <td>Work in a office</td> 
+  </tr>
+  <tr>
+    <td>Situation</td>
+    <td>Married wirh one child</td> 
+  </tr>
+   <tr>
+    <td>Web habits</td>
+    <td>go 1 hours/day on social media</td> 
+  </tr>
+     <tr>
+    <td>Quote</td>
+    <td>“If you stand for equality, then you're a feminist. Sorry to tell you” Emma Watson</td> 
+  </tr>
+     <tr>
+    <td>Knowlege level</td>
+    <td>Graduate in sociology and she has interest for a genderless education. </td> 
+  </tr>
+     <tr>
+    <td>Needs and attitude</td>
+    <td>She wants to buy toys for her daughter but would like to educate her in a more inclusive way. </td> 
+  </tr>
+</table>
 		</ul>
 		</section>
 	
-<h1>Moodboard</h1>
+<section id="task3">
+  <h2>IL task 3 : Exploring the audience needs in relation to design.</h2>
+  <p>I think that the best methods for my subject is <a href="https://www.gov.uk/service-manual/agile-delivery/writing-user-stories"> "Writing user stories" </a> The aim of my site is to raise awareness of sexist toy advertising. That's why I'm going to write a story for each of my personas.who will be my actors, I'm also going to put forward why they would use the service, the narrative part, and the objective behind this use and research. </p>
+      <li> Persona 1 : Rebecca needs to find an essay topic for the course. So she decides to concentrate on her subject of study, "advertising", and a societal problem, "sexism". So she searched the Internet for ideas to refine her subject. The site should help her find examples and create a problem and a thought process.</li>
+      <li>Persona 2 : Elizabeth is a mother who would like to give her daughter a genderless education. She has always found the pink and blue colours in toy shops sexist. So she did a search for inclusive toy brands. The site will enable her to analyse whether she is capable of recognising them and to discover non-sexist advertising that could be good for her daughter. </li>
+<h2>IL task 4 : Updating your portfolio. </h2>
+<p> I used HTML and more specifically tables to add my analysis.</p>
+</section>
+<section id="task4">
+<h2>Lab task 1 : Identify and evaluate websites </h2>
+<p> I choosed a website about the same topic than me <a href="https://shequal.com.au"> shequal.com</a> To view the website correctly, here is a screen recording. </p>
+<video width='450' height="450" controls>
+  <source src="video/shequal.mov" type="video/mp4">
+</video>
+<h3> The audience </h3>
+<p> You can clearly see on the home page what the website is about, in other words, equality in advertising. The representation of the "She" suggests that this site is aimed more at women. The aim of the site seems to be to educate people, as you can read on the web page where the collective's mission is clearly described: "It’s our mission to raise industry and public awareness, reinforce positive behaviours, and empower people to take action in shaping how women are represented in the stories we tell and consume." However, it is difficult to know what type of company this is. Especially when you look at the home page, which looks like a blog. The aim is to arouse curiosity, so there's a tab where you can contact the site's author for more information.</p>
+<img src="images/screen/she.jpeg" alt="she" height="300">
+<h3> Affordances, conceptual models and signifiers </h3>
+<li>As I said earlier, the aim of the site seems to be to create curiosity but also to educate people about the importance of equal advertising. You can see that there are different tabs, which makes it easy to navigate and see the problem being highlighted as well as the actions being taken. </li>
+<li>The site is easy to understand, but nevertheless seems a little slow and the home page gives the impression of being a catch-all. </li>
+<li>The use of images is particularly important because the site deals with advertising. So there is a concrete illustration. In addition, the home page tries to highlight the brand's products. There is an audio podcast and an illustration of the book. </li>
+<img src="images/screen/podcast.jpeg" alt="she" height="300">
+<img src="images/screen/book.jpeg" alt="she" height="300">
+<h3> Contrast, repetition, alignement, proximity</h3>
+<p>The site seems to follow a clear graphic charter. However, there are two orange bars that are constant and can affect the user experience. The strong presence of coloured bands can make the titles a little blurred, but they are written in a large enough font to stand out. </p>
+<h3> Content design</h3>
+<p> The website deals with a specific subject and seems to present a relevant angle for the consumer. The content appears to be in-depth, particularly when you consider the book featured. However, the sources used are not highlighted. The site seems to emphasise a personal point of view. </p>
+  <img src="images/screen/book.jpeg" alt="she" height="300">
+<h2>Lab task 2 : Consider your audience</h2>
+<p> Consider and make notes on how some of the features you examined might be suitable or unsuitable for your chosen audience. Try to adopt the mindset of one of your user personas and imagine how they might feel when interacting with the website. Consider and make notes on how some of the features you examined might be suitable or unsuitable for your chosen audience. Try to adopt the mindset of one of your user personas and imagine how they might feel when interacting with the website.</p>
+<p> The user will be presented with an advertisement and will have to choose between one of the two buttons below. Unfortunately, you can't use the buttons to carry out a survey, but I'd like to add an interactive aspect. With the site shown here, I have the impression that the consumer is simply a spectator being lectured. I'd like my site to provoke real reflection and questioning. </p>
+<img src="images/screen/button1.png" alt="feminist" height="100">
+<img src="images/screen/button2.png" alt="sexist" height="100">
+<p>Once you have made a choice, the correct answer will be displayed with an explanation. This will also keep the user on the website for longer.</p>
+<h3> Moodboard </h3>
 <p> <a href="https://miro.com/welcomeonboard/d0ltZEM4QmdYTFJDdnUwZ2lCQUJQS0xzNXhoT29vS1o4Q2pwbUpuMjQyR1BoNHAxUWJWU0NkTHBwSWFQNVROWXwzNDU4NzY0NTY1NTY5NjY1Mjk2fDI=?share_link_id=997274234409"> Moodboard link</a></p>
 
 	</div>
