--- a/week3.html
+++ b/week3.html
@@ -6,8 +6,7 @@
 
 	<title>Week 3</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<!--  <link rel="stylesheet" href="filepath/filename.css"> -->
-	<!--  When you have a stylesheet you can uncomment the link element above and edit the href to suit your file system and 		point to your CSS sheet -->
+	<link rel="stylesheet" type="text/css" href="csstemplate.css">
 </head>
 
 <body>
@@ -15,9 +14,19 @@
 	<!-- begin the main section of the page-->
 	<div id="main">
 		<h1>Week 3</h1>
+		<h2>IL task 1 : Identify key narrative points and create a plan</h2>
+		<p> Like I explainded for the week 2, I wanna create an interactive way to discover the subject. The aim is to create self-reflection and self-assessment of the ability to recognise sexist or non-sexist advertising. What's more, this gaming aspect will capture the user's attention, so they may stay longer than on a simple blog. Of course, it would be important to create an additional page to the game, highlighting the impact of toy advertising on children. </p>
+		<img src="images/screen/button1.png" alt="feminist" height="100">
+		<img src="images/screen/button2.png" alt="sexist" height="100">
+<h2> IL task 2 : Incorporate the narrative plan into your portfolio </h2>
+<p>The overall story will therefore be one of questioning the consumer's ability to recognise what is sexist and what is not. </p>
+<h2> Lab Task : Git Hub</h2> 
 		<p>It was my first time creating a GitHub project. The interface is a bit complicated to understand the first time but fortunately I followed the laboratory. 
 		I would still need to be careful to upload all the documents and not just one as I did for the first change.
 		As the project progressed, I found it easier and I understood the HTML code better, which gave me more confidence for the rest of the project.</p>
+		<img src="images/screen/Git.jpeg" alt="GitHub" height="100">
+		<p> My repository name is : "ebaugnie.github.io". So I uploaded all my documents to the git hub so that they would appear as a site. <a href="https://ebaugnie.github.io"> Git Hub link</a></p>
+
 	</div>
 	<!-- end the main section of the homepage -->
 	<hr>	
